# storage

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODOS  clippy.toml  docker-compose.yml
.cargo/: audit.toml
.claude/hooks/: pre-push.sh
.claude/skills/signet-storage/: SKILL.md
.github/workflows/: rust.yml
crates/cold/: Cargo.toml  README.md
crates/cold-mdbx/: Cargo.toml  README.md
crates/cold-mdbx/src/: backend.rs  connector.rs  error.rs  lib.rs  tables.rs
crates/cold-mdbx/tests/: timeout.rs
crates/cold-sql/: Cargo.toml  README.md
crates/cold-sql/migrations/: 001_initial.sql  001_initial_pg.sql  002_add_from_address.sql  002_add_from_address_pg.sql  002_add_topic_indexes.sql  002_add_topic_indexes_pg.sql
crates/cold-sql/src/: backend.rs  columns.rs  connector.rs  convert.rs  error.rs  lib.rs  postgres.rs  sqlite.rs
crates/cold-sql/tests/: statement_timeout.rs
crates/cold/src/: cold_receipt.rs  confirmed.rs  conformance.rs  connect.rs  error.rs  handle.rs  lib.rs  mem.rs  metrics.rs  request.rs  rich_log.rs  specifier.rs  stream.rs  traits.rs
crates/cold/src/task/: cache.rs  handle.rs  mod.rs  runner.rs
crates/cold/tests/: concurrency.rs  conformance.rs  drain_barrier.rs  handle_shape.rs  shutdown.rs  stream_isolation.rs
crates/cold/tests/common/: gated.rs  mod.rs
crates/hot/: Cargo.toml  README.md
crates/hot-mdbx/: Cargo.toml  README.md
crates/hot-mdbx/src/: cursor.rs  db_info.rs  error.rs  lib.rs  lock.rs  test_utils.rs  tx.rs  utils.rs
crates/hot/src/: conformance.rs  connect.rs  lib.rs  mem.rs
crates/hot/src/conformance/: cursor.rs  edge_cases.rs  history.rs  mod.rs  range.rs  roundtrip.rs  unwind.rs
crates/hot/src/db/: consistent.rs  errors.rs  inconsistent.rs  mod.rs  read.rs
crates/hot/src/model/: error.rs  mod.rs  revm.rs  traits.rs  traverse.rs
crates/hot/src/model/traverse/: cursor.rs  dual_key.rs  dual_table.rs  iter.rs  kv.rs  mod.rs  table.rs  types.rs
crates/hot/src/ser/: cold_impls.rs  error.rs  impls.rs  mod.rs  reth_impls.rs  traits.rs
crates/hot/src/tables/: definitions.rs  macros.rs  mod.rs
crates/hot/tests/: load_genesis.rs
crates/hot/tests/artifacts/: local.genesis.json  local.host.genesis.json  mainnet.genesis.json  mainnet.host.genesis.json  parmigiana.genesis.json  parmigiana.host.genesis.json  pecorino.genesis.json  pecorino.host.genesis.json
crates/storage/: Cargo.toml  README.md
crates/storage-rpc/: Cargo.toml
crates/storage-rpc/src/: error.rs  lib.rs  router.rs  types.rs
crates/storage-rpc/src/handlers/: block.rs  evm.rs  gas.rs  mod.rs  receipt.rs  state.rs  transaction.rs
crates/storage/src/: builder.rs  config.rs  either.rs  error.rs  lib.rs  unified.rs
crates/storage/tests/: unified.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: account.rs  alloy.rs  confirmation.rs  confirmed.rs  events.rs  execution.rs  indexed_receipt.rs  int_list.rs  lib.rs  log_filter.rs  sharded.rs  tx_location.rs  util.rs
docs/superpowers/plans/: 2026-04-03-cold-sql-pool-and-query-fixes.md
docs/superpowers/specs/: 2026-04-03-cold-sql-pool-and-query-fixes-design.md
scripts/: test-postgres.sh
