[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.92"
authors = ["init4"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/init4tech/signet-storage"
repository = "https://github.com/init4tech/signet-storage"

[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.bench]
inherits = "profiling"

[profile.ci-rust]
inherits = "dev"
strip = true
debug = false
incremental = false

[workspace.dependencies]
# internal
signet-hot = { version = "0.3.0", path = "./crates/hot" }
signet-hot-mdbx = { version = "0.3.0", path = "./crates/hot-mdbx" }
signet-cold = { version = "0.3.0", path = "./crates/cold" }
signet-cold-mdbx = { version = "0.3.0", path = "./crates/cold-mdbx" }
signet-cold-sql = { version = "0.3.0", path = "./crates/cold-sql" }
signet-storage = { version = "0.3.0", path = "./crates/storage" }
signet-storage-types = { version = "0.3.0", path = "./crates/types" }

# External, in-house
signet-libmdbx = { version = "0.8.0" }

signet-zenith = "0.16.0-rc.8"

# trevm
trevm = { version = "0.34.0", features = ["full_env_cfg"] }

# alloy
alloy = { version = "1.6", default-features = false, features = ["consensus", "rlp"] }

ahash = "0.8"
auto_impl = "1.3.0"
bytes = "1.11.0"
byteorder = "1.5.0"
criterion = "0.8.1"
page_size = "0.6.0"
parking_lot = "0.12.5"
rand = "0.9.2"
rayon = "1.10"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.20.0"
thiserror = "2.0.18"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
itertools = "0.14"
lru = "0.16"
sqlx = { version = "0.8", default-features = false }
tracing = "0.1.44"
