[package]
name = "signet-cold"
description = "Append-only cold storage for historical blockchain data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["blockchain", "storage", "cold-storage", "historical"]
categories = ["database-implementations"]

[dependencies]
alloy.workspace = true
lru = { workspace = true, optional = true }
signet-storage-types = { version = "0.0.1", path = "../types" }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[features]
default = ["cache"]
cache = ["lru"]
in-memory = []
test-utils = ["in-memory"]
