[package]
name = "signet-hot"
description = "Trait-based hot storage abstractions for fast read/write access to blockchain state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["storage", "key-value", "blockchain", "database"]
categories = ["database-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
signet-storage-types.workspace = true
signet-zenith.workspace = true

trevm.workspace = true

alloy.workspace = true

ahash.workspace = true
auto_impl.workspace = true
bytes.workspace = true
itertools.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
signet-hot = { path = ".", features = ["test-utils"] }
serde_json = "1.0"

[features]
default = []
in-memory = []
test-utils = ["in-memory"]
