[package]
name = "signet-storage"
description = "Unified storage interface for Signet hot and cold storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["blockchain", "storage", "ethereum"]
categories = ["data-structures"]

[dependencies]
signet-cold.workspace = true
signet-hot.workspace = true
signet-storage-types.workspace = true

alloy.workspace = true
thiserror.workspace = true

[features]
default = []
test-utils = ["signet-hot/test-utils", "signet-cold/test-utils"]
