[package]
name = "signet-storage"
description = "Unified storage interface for Signet hot and cold storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["blockchain", "storage", "ethereum"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
signet-cold.workspace = true
signet-cold-mdbx.workspace = true
signet-cold-sql = { workspace = true, optional = true }
signet-hot.workspace = true
signet-hot-mdbx.workspace = true
signet-storage-types.workspace = true

alloy.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
signet-storage = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-util.workspace = true
trevm.workspace = true

[features]
default = []
test-utils = ["signet-hot/test-utils", "signet-cold/test-utils"]
sql = ["signet-cold-sql/postgres"]
sqlite = ["signet-cold-sql/sqlite"]
