[package]
name = "signet-storage-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
bytes.workspace = true
roaring = "0.11.3"
serde.workspace = true
signet-zenith.workspace = true
thiserror.workspace = true
trevm.workspace = true

