[package]
name = "signet-storage-types"
description = "Shared primitive types for Signet storage crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["blockchain", "storage", "types", "ethereum"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
alloy.workspace = true
bitflags = "2.10.0"
bytes.workspace = true
roaring = "0.11.3"
serde.workspace = true
signet-zenith.workspace = true
thiserror.workspace = true
trevm.workspace = true

